# Haskell99Questions

./: 11to20answer.lkshw  1to10answers.lkshs  1to10answers.lkshw  README.md
11to20answer/: 11to20answer.cabal
11to20answer/src/: Main.hs
1to10answers/: 1to10answers.cabal
1to10answers/src/: Main.hs
