name: 11to20answer
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
description:
     

executable 11to20answer
    main-is: Main.hs
    build-depends:
        base -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans

test-suite test-11to20answer
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
