name: 1to10answers
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
description:
     

executable 1to10answers
    main-is: Main.hs
    build-depends:
        base -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans

test-suite test-1to10answers
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
